--- a/simplified_prototype.ipynb
+++ b/simplified_prototype.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AaPFL45byVou",
-        "outputId": "12e03a14-e765-4823-ea50-2845272d73e1"
+        "outputId": "d030efee-66be-45ae-89bd-458a5d26194d"
       },
       "outputs": [
         {
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjiaiXiekk2L",
-        "outputId": "530c053c-b479-422a-f92a-399b5337cad1"
+        "outputId": "e1574700-5419-484a-d838-0f7a4495934a"
       },
       "execution_count": 2,
       "outputs": [
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b_4XJwwNmXT4",
-        "outputId": "f6c9da5c-22ca-4e88-bdef-1124bac969e6"
+        "outputId": "8c5fb15e-d02b-45fb-83cc-48e26e737b50"
       },
       "execution_count": 4,
       "outputs": [
@@ -254,7 +254,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Step 2: Guide for Inference\n"
+        " Step 2: Guide for Inference\n"
       ],
       "metadata": {
         "id": "Fuw1ztQXuSZK"
@@ -308,7 +308,7 @@
         "    \"\"\"Takes a list of notes as pitch classes and returns a vector of counts.\"\"\"\n",
         "    chord = torch.zeros(npcs, device=device)\n",
         "    for fifth in notes:\n",
-        "        index = utils.fifth_to_index(fifth)  # Assuming utils.fifth_to_index simply shifts the pitch class to the index\n",
+        "        index = utils.fifth_to_index(fifth)\n",
         "        chord[index] += 1\n",
         "    return chord\n",
         "\n",
@@ -486,7 +486,7 @@
       "metadata": {
         "id": "pKJ-EUkQq8pE"
       },
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -580,7 +580,7 @@
       "metadata": {
         "id": "W0UKUeY0r-kn"
       },
-      "execution_count": 30,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -603,11 +603,11 @@
         "dcml_init = get_init_params(dcml_df, npcs)"
       ],
       "metadata": {
+        "id": "GEi4jjA_yEfP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "GEi4jjA_yEfP",
-        "outputId": "cb47d29d-2974-4c62-91c3-dcc72d8421bf"
+        "outputId": "5b02a1e7-b40b-48ef-b9d6-fecd5f1d0f71"
       },
       "execution_count": 16,
       "outputs": [
@@ -632,20 +632,34 @@
         "                                      save_as=\"dcml_params\")"
       ],
       "metadata": {
+        "id": "Y_jYW4TetpZF",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 507
+          "height": 770
         },
-        "id": "Y_jYW4TetpZF",
-        "outputId": "257fe7be-16c6-4148-c57d-98e445857fbd"
+        "outputId": "58e4937e-65f5-4b50-ffa6-89afe114eb39"
       },
-      "execution_count": 24,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 350/350 [00:04<00:00, 80.67it/s]\n"
+            "\r  0%|          | 0/350 [00:00<?, ?it/s]/usr/local/lib/python3.10/dist-packages/pyro/util.py:288: UserWarning: Found non-auxiliary vars in guide but not model, consider marking these infer={'is_auxiliary': True}:\n",
+            "{'rate_notes'}\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/pyro/util.py:303: UserWarning: Found vars in model but not guide: {'chord_type', 'n'}\n",
+            "  warnings.warn(f\"Found vars in model but not guide: {bad_sites}\")\n",
+            "/usr/local/lib/python3.10/dist-packages/pyro/util.py:365: UserWarning: Found plate statements in guide but not model: {'chord_pitches'}\n",
+            "  warnings.warn(\n",
+            "  0%|          | 1/350 [00:02<13:59,  2.41s/it]/usr/local/lib/python3.10/dist-packages/pyro/util.py:288: UserWarning: Found non-auxiliary vars in guide but not model, consider marking these infer={'is_auxiliary': True}:\n",
+            "{'rate_notes'}\n",
+            "  warnings.warn(\n",
+            "/usr/local/lib/python3.10/dist-packages/pyro/util.py:303: UserWarning: Found vars in model but not guide: {'chord_type', 'n'}\n",
+            "  warnings.warn(f\"Found vars in model but not guide: {bad_sites}\")\n",
+            "/usr/local/lib/python3.10/dist-packages/pyro/util.py:365: UserWarning: Found plate statements in guide but not model: {'chord_pitches'}\n",
+            "  warnings.warn(\n",
+            "100%|██████████| 350/350 [00:09<00:00, 35.76it/s]\n"
           ]
         },
         {
@@ -673,13 +687,13 @@
         "print(dcml_params.keys())\n"
       ],
       "metadata": {
+        "id": "kUudilu7511H",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "kUudilu7511H",
-        "outputId": "7e759e04-f355-4e85-bf46-4055d445290c"
+        "outputId": "6342a9f9-3c1d-4a44-8e97-174e82954776"
       },
-      "execution_count": 27,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,14 +711,14 @@
         "plot_histories(\"DCML\", dhist)"
       ],
       "metadata": {
+        "id": "gCCBaU3utwuI",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 307
         },
-        "id": "gCCBaU3utwuI",
-        "outputId": "3271a995-4bbd-4425-a522-20c3327b4de1"
+        "outputId": "c26d65ae-550b-4df0-acf1-a044d3a27956"
       },
-      "execution_count": 28,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -737,14 +751,14 @@
         "plt.show()\n"
       ],
       "metadata": {
+        "id": "7-KyzGtltyiE",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 906
         },
-        "id": "7-KyzGtltyiE",
-        "outputId": "320c37b7-8362-4200-b181-e2a2cc53541b"
+        "outputId": "f6f6c2f2-4b69-40c1-8f39-949bac3e6e79"
       },
-      "execution_count": 31,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
