--- a/simplified_prototype.ipynb
+++ b/simplified_prototype.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AaPFL45byVou",
-        "outputId": "f0a9f59d-7cfb-4bbf-955f-b715ad19ff86"
+        "outputId": "37534ba7-d9b3-4f72-b774-4e56f1b57266"
       },
       "outputs": [
         {
@@ -52,7 +52,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjiaiXiekk2L",
-        "outputId": "5ca4504d-3ac4-48d7-a696-572f4bac663b"
+        "outputId": "074623ec-bfd6-48c6-f7a8-1f78f96f409f"
       },
       "execution_count": 2,
       "outputs": [
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b_4XJwwNmXT4",
-        "outputId": "2a85612b-7bd1-4eeb-b980-63431fa62cc0"
+        "outputId": "0eead90a-981f-4796-fdf8-fce57aa25458"
       },
       "execution_count": 4,
       "outputs": [
@@ -238,7 +238,31 @@
         "        pitches = pyro.sample('pitches', Dirichlet(0.5 * torch.ones(npcs, device=device)))\n",
         "\n",
         "    # Return the sampled chord types and pitches\n",
-        "    return {'chord_type': chord_type, 'pitches': pitches}"
+        "    return {'chord_type': chord_type, 'pitches': pitches}\n",
+        "\n",
+        "# def simplified_chord_model(npcs, data, init, observed_data=None):\n",
+        "#     # parameters priors:\n",
+        "#     # choose the distribution of chord types\n",
+        "#     p_chord = pyro.sample('p_chord', Dirichlet(0.5 * torch.ones(npcs, device=device)))\n",
+        "\n",
+        "#     # sampling the data:\n",
+        "#     nchords = len(data)\n",
+        "#     with pyro.plate('data', nchords) as ind:\n",
+        "#         # pick a chord type for each chord (now unknown, to be inferred)\n",
+        "#         chord_type = pyro.sample('chord_type', Categorical(p_chord))\n",
+        "\n",
+        "#         # pick a number of notes for each chord based on the chord type\n",
+        "#         nnotes = 1 + pyro.sample('n', Poisson(torch.tensor(3., device=device))).int()\n",
+        "\n",
+        "#         # sample the pitches for each note in the chord\n",
+        "#         pitches = pyro.sample('pitches', Dirichlet(0.5 * torch.ones(npcs, device=device)))\n",
+        "\n",
+        "#         if observed_data is not None:\n",
+        "#             nnotes = observed_data['n']\n",
+        "#             pitches = observed_data['pitches']\n",
+        "\n",
+        "#     # Return the sampled chord types and pitches\n",
+        "#     return {'chord_type': chord_type, 'pitches': pitches}"
       ],
       "metadata": {
         "id": "hx_WSJBPtsdC"
@@ -286,37 +310,7 @@
         "                                   torch.ones(nchords, device=device),\n",
         "                                   constraint=constraints.positive)\n",
         "    with pyro.plate('data_chord_type', nchords):\n",
-        "        pyro.sample('chord_type', Categorical(logits=params_chord_type))\n",
-        "\n",
-        "\n",
-        "# def simplified_chord_guide(npcs, data, **kwargs):\n",
-        "#     nchords = len(data)\n",
-        "\n",
-        "#     # Learnable parameters for chord types distribution\n",
-        "#     params_p_chord = pyro.param('params_p_chord',\n",
-        "#                                 torch.ones(npcs, device=device),\n",
-        "#                                 constraint=constraints.simplex)\n",
-        "\n",
-        "#     # Learnable parameters for chord pitches distributions\n",
-        "#     params_pitches = pyro.param('params_pitches',\n",
-        "#                                 torch.ones([nchords, npcs], device=device),\n",
-        "#                                 constraint=constraints.simplex)\n",
-        "\n",
-        "#     # Learnable parameter for the Poisson distribution governing the number of notes\n",
-        "#     params_n_rate = pyro.param('params_n_rate',\n",
-        "#                                torch.ones(nchords, device=device),\n",
-        "#                                constraint=constraints.positive)\n",
-        "\n",
-        "#     with pyro.plate('data', nchords):\n",
-        "#         # Sample the number of notes as a latent variable\n",
-        "#         n = pyro.sample('n', Poisson(params_n_rate))\n",
-        "\n",
-        "#         # Learnable parameters for each chord's type\n",
-        "#         params_chord_type = pyro.param('params_chord_type',\n",
-        "#                                        torch.ones([nchords, npcs], device=device),\n",
-        "#                                        constraint=constraints.simplex)\n",
-        "#         # Sample chord types as a latent variable\n",
-        "#         pyro.sample('chord_type', Categorical(logits=params_chord_type))"
+        "        pyro.sample('chord_type', Categorical(logits=params_chord_type))"
       ],
       "metadata": {
         "id": "jhYjDCSas9NW"
@@ -495,6 +489,7 @@
         "    for i in tqdm.trange(nsteps):\n",
         "        # update parameters and record loss\n",
         "        losses[i] = svi.step(npcs, data=data, init=init)\n",
+        "        # losses[i] = svi.step(npcs, data=data, init=init, observed_data=observed_data)\n",
         "\n",
         "        # record values of some parameters\n",
         "        ps = pyro.get_param_store()\n",
@@ -574,18 +569,6 @@
       "source": [
         "# posterior\n",
         "\n",
-        "# def plot_chord_types(name, ax, chord_types):\n",
-        "#     ax.bar(np.arange(len(chord_types)), chord_types)\n",
-        "#     ax.set_xlabel('Chord Types')\n",
-        "#     ax.set_ylabel('Probability')\n",
-        "#     ax.set_title(f'Chord Type Distribution ({name})')\n",
-        "\n",
-        "# def plot_pitches(name, ax, pitches, chord_index=0):\n",
-        "#     ax.bar(np.arange(len(pitches[chord_index])), pitches[chord_index])\n",
-        "#     ax.set_xlabel('Pitches')\n",
-        "#     ax.set_ylabel('Probability')\n",
-        "#     ax.set_title(f'Pitch Distribution for Chord Type {chord_index} ({name})')\n",
-        "\n",
         "# def plot_posteriors(name, params):\n",
         "#     fig, axs = plt.subplots(2, 1, figsize=(12, 12))\n",
         "\n",
@@ -657,14 +640,18 @@
       "source": [
         "# prepare the dataset\n",
         "dcml_df, dcml_obs, dcml_chordtypes = load_dataset('dcml.tsv')\n",
-        "dcml_init = get_init_params(dcml_df, npcs)"
+        "dcml_init = get_init_params(dcml_df, npcs)\n",
+        "# observed_data = {\n",
+        "#     'n': torch.tensor(dcml_init['n_chords'], dtype=torch.float32),\n",
+        "#     'pitches': torch.tensor(dcml_init['pitches'], dtype=torch.float32)\n",
+        "# }"
       ],
       "metadata": {
         "id": "GEi4jjA_yEfP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2ab3c1f1-38a8-4264-d7cd-3a98a78798b9"
+        "outputId": "c9be2e4b-0098-433d-918a-6a98d5dfbdcb"
       },
       "execution_count": 16,
       "outputs": [
@@ -694,19 +681,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 596
         },
-        "outputId": "2d840d2b-ac28-49ae-86c9-f4bb57df824a"
+        "outputId": "1adb3beb-6715-4a3f-c145-6dd1244cb61d"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r  0%|          | 0/350 [00:00<?, ?it/s]/usr/local/lib/python3.10/dist-packages/pyro/util.py:365: UserWarning: Found plate statements in guide but not model: {'data_chord_type', 'data_n'}\n",
+            "\r  0%|          | 0/350 [00:00<?, ?it/s]/usr/local/lib/python3.10/dist-packages/pyro/util.py:365: UserWarning: Found plate statements in guide but not model: {'data_n', 'data_chord_type'}\n",
             "  warnings.warn(\n",
-            "  0%|          | 1/350 [00:01<11:23,  1.96s/it]/usr/local/lib/python3.10/dist-packages/pyro/util.py:365: UserWarning: Found plate statements in guide but not model: {'data_chord_type', 'data_n'}\n",
+            "  0%|          | 1/350 [00:03<19:19,  3.32s/it]/usr/local/lib/python3.10/dist-packages/pyro/util.py:365: UserWarning: Found plate statements in guide but not model: {'data_n', 'data_chord_type'}\n",
             "  warnings.warn(\n",
-            "100%|██████████| 350/350 [00:12<00:00, 27.53it/s]\n"
+            "100%|██████████| 350/350 [00:13<00:00, 25.90it/s]\n"
           ]
         },
         {
@@ -739,9 +726,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 294
         },
-        "outputId": "7506f424-c67d-4389-e1c5-b19cee5cbf4a"
+        "outputId": "8adbe10f-3d70-4a78-b25a-111cd7757f1c"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
@@ -766,9 +753,9 @@
           "height": 1000
         },
         "id": "5xHWE-N8y9mU",
-        "outputId": "2981b58e-f3c8-451e-e04f-8e0d453a7e38"
+        "outputId": "0e9732d4-a674-44be-dc4f-2095d279a546"
       },
-      "execution_count": 21,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "display_data",
