--- a/simplified_prototype.ipynb
+++ b/simplified_prototype.ipynb
@@ -15,6 +15,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# A Cognitive Model or Harmonic Types (Simplified)"
+      ],
+      "metadata": {
+        "id": "y54ko6uFwSlH"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -22,14 +31,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AaPFL45byVou",
-        "outputId": "617e517f-ad3e-4369-999a-08896e558574"
+        "outputId": "bfbddd68-e534-40ca-af18-56a8e8332198"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Mounted at /content/drive\n",
             "/content/drive/MyDrive/Thesis/probabilistic_harmony_model\n"
           ]
         }
@@ -52,7 +61,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjiaiXiekk2L",
-        "outputId": "60b09c68-a8ad-40a7-d601-08bab0e3828c"
+        "outputId": "08baf6a0-b61f-4520-8fda-c0bea0d80a18"
       },
       "execution_count": 2,
       "outputs": [
@@ -60,9 +69,14 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pyro-api==0.1.2 in /usr/local/lib/python3.10/dist-packages (0.1.2)\n",
-            "Requirement already satisfied: pyro-ppl==1.8.4 in /usr/local/lib/python3.10/dist-packages (1.8.4)\n",
-            "Requirement already satisfied: numpy>=1.7 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (1.23.5)\n",
+            "Collecting pyro-api==0.1.2\n",
+            "  Downloading pyro_api-0.1.2-py3-none-any.whl (11 kB)\n",
+            "Installing collected packages: pyro-api\n",
+            "Successfully installed pyro-api-0.1.2\n",
+            "Collecting pyro-ppl==1.8.4\n",
+            "  Downloading pyro_ppl-1.8.4-py3-none-any.whl (730 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m730.7/730.7 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.7 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (1.23.5)\n",
             "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (3.3.0)\n",
             "Requirement already satisfied: pyro-api>=0.1.1 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (0.1.2)\n",
             "Requirement already satisfied: torch>=1.11.0 in /usr/local/lib/python3.10/dist-packages (from pyro-ppl==1.8.4) (2.1.0+cu121)\n",
@@ -76,8 +90,13 @@
             "Requirement already satisfied: triton==2.1.0 in /usr/local/lib/python3.10/dist-packages (from torch>=1.11.0->pyro-ppl==1.8.4) (2.1.0)\n",
             "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/dist-packages (from jinja2->torch>=1.11.0->pyro-ppl==1.8.4) (2.1.3)\n",
             "Requirement already satisfied: mpmath>=0.19 in /usr/local/lib/python3.10/dist-packages (from sympy->torch>=1.11.0->pyro-ppl==1.8.4) (1.3.0)\n",
-            "Requirement already satisfied: pitchtypes==0.4.0 in /usr/local/lib/python3.10/dist-packages (0.4.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from pitchtypes==0.4.0) (1.23.5)\n"
+            "Installing collected packages: pyro-ppl\n",
+            "Successfully installed pyro-ppl-1.8.4\n",
+            "Collecting pitchtypes==0.4.0\n",
+            "  Downloading pitchtypes-0.4.0-py3-none-any.whl (39 kB)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.10/dist-packages (from pitchtypes==0.4.0) (1.23.5)\n",
+            "Installing collected packages: pitchtypes\n",
+            "Successfully installed pitchtypes-0.4.0\n"
           ]
         }
       ]
@@ -137,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b_4XJwwNmXT4",
-        "outputId": "c91ea9bd-56c3-4690-9106-da8b38b6b5c6"
+        "outputId": "19e624fb-a40d-4ed1-e214-7e6a8f22057b"
       },
       "execution_count": 4,
       "outputs": [
@@ -322,7 +341,7 @@
       "cell_type": "code",
       "source": [
         "def simplified_chord_tensor(notes):\n",
-        "    \"\"\"Takes a list of notes as (fifth, type) pairs and returns a vector of counts for fifths.\"\"\"\n",
+        "    \"\"\"Takes a list of fifths and returns a vector of counts for fifths.\"\"\"\n",
         "    chord = torch.zeros(npcs, device=device)\n",
         "    for fifth in notes:\n",
         "        index = utils.fifth_to_index(fifth)\n",
@@ -617,7 +636,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "38c54e95-4c93-4df9-b6cb-33d719e0a09d"
+        "outputId": "5d3e139d-b3f0-4f8b-92a5-1b46bc837741"
       },
       "execution_count": 16,
       "outputs": [
@@ -648,7 +667,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 507
         },
-        "outputId": "269955b1-4fdc-4d49-987f-2bc5ae564a8a"
+        "outputId": "b6da8073-47f9-4b5f-a3c2-afa3a16b1e2e"
       },
       "execution_count": 17,
       "outputs": [
@@ -656,7 +675,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 350/350 [03:57<00:00,  1.48it/s]\n"
+            "100%|██████████| 350/350 [03:51<00:00,  1.51it/s]\n"
           ]
         },
         {
@@ -689,7 +708,7 @@
           "height": 564
         },
         "id": "Men_tEzFxdIc",
-        "outputId": "6201a98f-ed4e-4d3c-d775-6aa885ef2065"
+        "outputId": "47e4100c-6628-411a-e342-d7397a854612"
       },
       "execution_count": 18,
       "outputs": [
@@ -716,7 +735,7 @@
           "height": 1000
         },
         "id": "ux7DRu7Rxfbk",
-        "outputId": "49b782a7-ed4b-4b05-833c-cb3fc44d0376"
+        "outputId": "9596da58-66d7-4f7c-a76b-199193de66a8"
       },
       "execution_count": 19,
       "outputs": [
@@ -753,7 +772,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CH-LI_Snzjxg",
-        "outputId": "aa4e0a95-3905-4cf7-a212-a3e74baa825c"
+        "outputId": "299416c5-068e-4e97-a7b8-04252b2ab550"
       },
       "execution_count": 20,
       "outputs": [
@@ -780,15 +799,6 @@
           "execution_count": 20
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "amYhW3s70GcD"
-      },
-      "execution_count": 20,
-      "outputs": []
     }
   ]
 }
