--- a/simplified_prototype.ipynb
+++ b/simplified_prototype.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +63,7 @@
         "id": "yjiaiXiekk2L",
         "outputId": "d344fc98-d443-4713-8f2d-2c904f0b69b1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "sfBowDnVkoUt"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "id": "b_4XJwwNmXT4",
         "outputId": "0b2c45f8-ce2b-44a6-c3c0-ba0730105e07"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "bCjCALWwmX6x"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "CBX40dqcmZ3l"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,13 +288,13 @@
       "metadata": {
         "id": "bojZek1O660d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        " Step 2: Guide for Inference\n"
+        "## Step 2: Guide for Inference\n"
       ],
       "metadata": {
         "id": "Fuw1ztQXuSZK"
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "jhYjDCSas9NW"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -359,7 +359,7 @@
       "metadata": {
         "id": "ybKoKUgKyhPB"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -405,7 +405,7 @@
       "metadata": {
         "id": "DX1dqkvnyatB"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -430,7 +430,7 @@
       "metadata": {
         "id": "G7dwaFCFqK7R"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -460,7 +460,7 @@
       "metadata": {
         "id": "yRbJ3f6QqRqW"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +521,7 @@
       "metadata": {
         "id": "pKJ-EUkQq8pE"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -574,7 +574,7 @@
       "metadata": {
         "id": "34B9P4ENr9yX"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -612,7 +612,7 @@
       "metadata": {
         "id": "W0UKUeY0r-kn"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +647,7 @@
         },
         "outputId": "77ad90ca-7376-458e-cc1e-7152350afdcc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -678,7 +678,7 @@
         },
         "outputId": "ccefd311-43b2-401d-c807-c12d21e5ccca"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -719,7 +719,7 @@
         "id": "Men_tEzFxdIc",
         "outputId": "1f52bd62-e5ef-4de3-9398-388f313e0d2b"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -757,7 +757,7 @@
         "id": "ux7DRu7Rxfbk",
         "outputId": "db7200b9-4234-40f7-c87d-1fc6e6eb6058"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -804,7 +804,7 @@
         "id": "CH-LI_Snzjxg",
         "outputId": "e92de040-090b-40cf-d9c1-4449ba776db3"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
